--- a/ProjectIRWA_Text Processing.ipynb
+++ b/ProjectIRWA_Text Processing.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,8 +50,8 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\Lau\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data]     C:\\Users\\mire2\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
      ]
     }
    ],
@@ -104,26 +104,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2399"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(tweets_data[0].keys())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,88 +111,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 78,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                   0  \\\n",
-      "0  {'created_at': 'Wed Oct 13 09:15:58 +0000 2021...   \n",
-      "\n",
-      "                                                   1  \\\n",
-      "0  {'created_at': 'Wed Oct 13 08:46:17 +0000 2021...   \n",
-      "\n",
-      "                                                   2  \\\n",
-      "0  {'created_at': 'Wed Oct 13 07:53:28 +0000 2021...   \n",
-      "\n",
-      "                                                   3  \\\n",
-      "0  {'created_at': 'Wed Oct 13 05:47:26 +0000 2021...   \n",
-      "\n",
-      "                                                   4  \\\n",
-      "0  {'created_at': 'Wed Oct 13 05:47:10 +0000 2021...   \n",
-      "\n",
-      "                                                   5  \\\n",
-      "0  {'created_at': 'Wed Oct 13 05:44:56 +0000 2021...   \n",
-      "\n",
-      "                                                   6  \\\n",
-      "0  {'created_at': 'Tue Oct 12 22:15:15 +0000 2021...   \n",
-      "\n",
-      "                                                   7  \\\n",
-      "0  {'created_at': 'Tue Oct 12 22:15:12 +0000 2021...   \n",
-      "\n",
-      "                                                   8  \\\n",
-      "0  {'created_at': 'Tue Oct 12 21:01:45 +0000 2021...   \n",
-      "\n",
-      "                                                   9  ...  \\\n",
-      "0  {'created_at': 'Tue Oct 12 21:01:40 +0000 2021...  ...   \n",
-      "\n",
-      "                                                2389  \\\n",
-      "0  {'created_at': 'Fri Jun 25 10:04:00 +0000 2021...   \n",
-      "\n",
-      "                                                2390  \\\n",
-      "0  {'created_at': 'Fri Jun 25 09:05:03 +0000 2021...   \n",
-      "\n",
-      "                                                2391  \\\n",
-      "0  {'created_at': 'Thu Jun 24 21:22:22 +0000 2021...   \n",
-      "\n",
-      "                                                2392  \\\n",
-      "0  {'created_at': 'Thu Jun 24 15:38:09 +0000 2021...   \n",
-      "\n",
-      "                                                2393  \\\n",
-      "0  {'created_at': 'Thu Jun 24 13:51:17 +0000 2021...   \n",
-      "\n",
-      "                                                2394  \\\n",
-      "0  {'created_at': 'Thu Jun 24 12:38:49 +0000 2021...   \n",
-      "\n",
-      "                                                2395  \\\n",
-      "0  {'created_at': 'Thu Jun 24 11:46:20 +0000 2021...   \n",
-      "\n",
-      "                                                2396  \\\n",
-      "0  {'created_at': 'Thu Jun 24 11:41:45 +0000 2021...   \n",
-      "\n",
-      "                                                2397  \\\n",
-      "0  {'created_at': 'Thu Jun 24 11:41:26 +0000 2021...   \n",
-      "\n",
-      "                                                2398  \n",
-      "0  {'created_at': 'Thu Jun 24 11:00:38 +0000 2021...  \n",
-      "\n",
-      "[1 rows x 2399 columns]\n"
-     ]
-    }
-   ],
+   "source": [
+    "In order to read and process each tweet, we create a dictionary in which we will have just one row, and each column will contain one tweet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Build DataFrame of tweet texts and languages\n",
     "df = pd.DataFrame(tweets_data)\n",
-    "\n",
-    "# Print head of DataFrame\n",
-    "print(df.head())\n",
-    "\n",
-    "#parse dataframe to csv\n",
     "df.to_csv('df.csv')"
    ]
   },
@@ -220,12 +134,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now create a new variable called 'texts' which will contain in each position of the array a tweet.  "
+    "We now create a new variable called 'texts' which will contain in each position of the array a tweet. Below this cell we print as an example the content of the first position of the array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +160,7 @@
        "\"It's International Day for Disaster Risk Reduction\\n\\n#OpenWHO has launched a multi-tiered core curriculum to help equip you with the competencies needed to work within public health emergency response.\\n\\nStart learning today &amp; be #Ready4Response:\\n👉 https://t.co/hBFFOF0xKL https://t.co/fgZY22RWuS\""
       ]
      },
-     "execution_count": 80,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,24 +168,6 @@
    "source": [
     "texts[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"it's international day for disaster risk reduction\\n\\n#openwho has launched a multi-tiered core curriculum to help equip you with the competencies needed to work within public health emergency response.\\n\\nstart learning today &amp; be #ready4response:\\n👉 https://t.co/hbffof0xkl https://t.co/fgzy22rwus\""
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -288,15 +184,20 @@
     "\n",
     "It takes as input a text and performs the following operations:\n",
     "\n",
-    "- Remove stop words\n",
     "- Stem terms\n",
+    "- Remove stop words\n",
+    "- Remove punctuation \n",
+    "- Remove links\n",
+    "- Remove emojis\n",
     "- Transform all text to lowercase\n",
-    "- Tokenize the text to get a list of terms"
+    "- Tokenize the text to get a list of terms\n",
+    "\n",
+    "(We decided not to remove hashtags since it may be interesting to treat them separately later)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +220,7 @@
     "    remove = remove.replace(\"#\", \"–\")# don't remove hashtags\n",
     "    remove = remove+'¿'\n",
     "    pattern = r\"[{}]\".format(remove) # create the pattern\n",
-    "    text=re.sub(pattern, \"\", text)\n",
+    "    text = re.sub(pattern, \"\", text)\n",
     "    text = re.sub(r'http\\S+', '', text)\n",
     "    \n",
     "    #compile a regular expression pattern into a regular expression object\n",
@@ -349,57 +250,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 148,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['rt',\n",
-       " 'drtedro',\n",
-       " 'donat',\n",
-       " 'arent',\n",
-       " 'enough',\n",
-       " 'deliv',\n",
-       " '#vaccinequ',\n",
-       " 'end',\n",
-       " '#covid19',\n",
-       " 'pandem',\n",
-       " 'need',\n",
-       " 'stronger',\n",
-       " 'leadership',\n",
-       " 'ramp',\n",
-       " 'the…']"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "build_terms(texts[11])"
+    "Now we pass the whole list of tweets into the function we just created in order to process them all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts_processed = []\n",
+    "for i in range(len(texts)):\n",
+    "    texts_processed.append(build_terms(texts[i]))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And here we have an example of the first tweet before and after being processed: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'#COVID19 has shown how health emergencies and disasters affect entire communities – especially those with weak health systems, and vulnerable populations like migrants, indigenous peoples, and those living in fragile humanitarian conditions. https://t.co/jpUQpnu0V1'"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before:  #COVID19 has shown how health emergencies and disasters affect entire communities – especially those with weak health systems, and vulnerable populations like migrants, indigenous peoples, and those living in fragile humanitarian conditions. https://t.co/jpUQpnu0V1 \n",
+      "\n",
+      "After:  ['#covid19', 'shown', 'health', 'emerg', 'disast', 'affect', 'entir', 'commun', 'especi', 'weak', 'health', 'system', 'vulner', 'popul', 'like', 'migrant', 'indigen', 'peopl', 'live', 'fragil', 'humanitarian', 'condit'] \n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "texts[1]"
+    "print('Before: ', texts[1],'\\n')\n",
+    "print('After: ', texts_processed[1], '\\n')"
    ]
   }
  ],
@@ -419,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
