--- a/P2 Evaluation/Evaluation_stud.ipynb
+++ b/P2 Evaluation/Evaluation_stud.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4     0       4            -1.268338     0.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "4     0       4            -1.268338     0.0           0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,10 +358,32 @@
     "    precision @k : float\n",
     "    \n",
     "    '''    \n",
+    "    print(y_score)\n",
     "    order = np.argsort(y_score)[::1]\n",
     "    y_true = np.take(y_true,order[:k])\n",
     "    relevant = sum(y_true==1)\n",
     "    return relevant/k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_score' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                     Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-56b2b2a9380b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'y_score' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "y_score"
    ]
   },
   {
@@ -373,13 +395,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0     -0.637926\n",
+      "1     -0.824241\n",
+      "2     -1.358856\n",
+      "3     -0.096755\n",
+      "4     -1.268338\n",
+      "         ...   \n",
+      "133    0.460846\n",
+      "134   -0.415846\n",
+      "135    0.374341\n",
+      "136   -1.290106\n",
+      "137    0.205322\n",
+      "Name: predicted_relevance, Length: 138, dtype: float64\n",
       "==> Precision@5: 0.2\n",
       "\n",
       "\n",
@@ -469,7 +503,7 @@
        "86      0      86             1.082985     3.0           1"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
